# dmtcp

./: .clang-format  .gitignore  .travis.yml  AGENTS.md  COPYING  Dockerfile  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NEWS  PROJECTS.md  QUICK-START  QUICK-START.md  README.md  STATIC_DMTCP_BUILD.sh  TESTING.md  TODO  VERSION  autogen.sh  config.guess  configure  configure.ac  configure.in  description  gene-email.txt  index.html  makeRelease.sh  params.json  te
debian/: NEWS  (+17 more)
dmtcp/: HITLIST  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  dmtcp.kdevelop  dmtcp.kdevelop.pcs  dmtcp.kdevses  mtcp_restore
dmtcp/debian/: README.Debian  control  dmtcp-default.ex  dmtcp.doc-base.EX  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.sgml.ex  menu.ex  postinst.ex  rules  watch.ex
dmtcp/doc/: thread-creation.txt
dmtcp/examples/: Makefile.am  Makefile.in  README
dmtcp/include/: config.h.in  dmtcp.h  dmtcpalloc.h  dmtcpplugin.h  protectedfds.h  shareddata.h  util.h  virtualidtable.h
dmtcp/jalib/: jalib.cpp  jalib.h  jalloc.cpp  jalloc.h  jassert.cpp  jassert.h  jbuffer.h  jconvert.h  jfilesystem.cpp  jfilesystem.h  jserialize.cpp  jserialize.h  jsocket.cpp  jsocket.h  jtimer.cpp  jtimer.h
dmtcp/src/: Makefile.am  Makefile.in  TODO  checkpointcoordinator.cpp  checkpointcoordinator.h  ckptserializer.cpp  ckptserializer.h  config.h.in  connection.cpp  connection.h  connectionidentifier.cpp  connectionidentifier.h  connectionmanager.cpp  connectionmanager.h  connectionrewirer.cpp  connectionrewirer.h  connectionstate.cpp  connectionstate.h  constants.h  coordinatorapi.cpp  coordinatorapi.h  dmtcp_checkpoint.cpp  dmtcp_command.cpp  dmtcp_coordinator.cpp  dmtcp_coordinator.h  dmtcp_discover_rm.cpp  dmtcp_inspector.cpp  dmtcp_launch.cpp  dmtcp_nocheckpoint.c  dmtcp_restart.cpp  dmtcpalloc.h  dmtcpapi.cpp  dmtcpaware.c  dmtcpaware.cpp  dmtcpaware.h  dmtcpawareapi.cpp  dmtcpcheckpoint.cpp  dmtcpcoordinator.cpp  dmtcpcoordinatorapi.cpp  dmtcpcoordinatorapi.h  (+111 more)
dmtcp/templates/: cpp
module/ptrace/: Makefile.am  Makefile.in  README  mtcp_ptrace.c  mtcp_ptrace.h  ptrace.cpp  ptrace.h  ptrace_syscallsreal.c  ptracewrappers.cpp  ptracewrappers.h
modules/: configure.ac
modules/ptrace/: mtcp_ptrace.c  ptrace.cpp  ptrace.h  ptracewrappers.cpp  ptracewrappers.h
plugin/: Makefile.am  Makefile.in  README
plugin/alloc/: Makefile.in  mallocwrappers.cpp  mmapwrappers.cpp
plugin/batch-queue/: Makefile.in  README  discover_dmtcpinput.cpp  discover_dmtcpinput.h  discover_resources.cpp  discover_resources.h  discover_slurm.cpp  discover_slurm.h  discover_torque.cpp  discover_torque.h  dmtcp_discover_rm.cpp  dmtcp_rm_loclaunch.sh  dmtcp_srun_helper.cpp  resource_manager.cpp  rm_main.cpp  rm_main.h  rm_pmi.cpp  rm_pmi.h  rm_slurm.cpp  rm_slurm.h  rm_torque.cpp  rm_torque.h  rm_utils.cpp  rm_utils.h  slurm_helper.cpp  slurm_helper.h  torque.cpp  torque.h
plugin/conn/: Makefile.in  conn.cpp  conn.h  connection.cpp  connection.h  connectionidentifier.h  connectionlist.cpp  connectionlist.h  connectionrewirer.cpp  filewrappers.cpp  posixipcwrappers.cpp  socketwrappers.cpp
plugin/cuda/: Makefile  README.md  cuda-ckpt.cpp
plugin/ipc/: Makefile.in  connection.cpp  connectionidentifier.h  connectionlist.cpp  connectionlist.h  ipc.cpp  util_ipc.h
plugin/modify-env/: Makefile.in  README  dmtcp_env2.txt  modify-env.c  modify-env.py  test.c  warning.cpp
plugin/pathvirt/: README  pathvirt.cpp  pathvirt.h
plugin/pid/: Makefile.in  pid.cpp  pid_filewrappers.cpp  pid_miscwrappers.cpp  pid_syscallsreal.c  pidvirt_miscwrappers.cpp  pidvirt_syscallsreal.c  pidwrappers.cpp  pidwrappers.h  virtualpidtable.cpp  virtualpidtable.h
plugin/pidvirt/: Makefile.in  pidvirt.cpp  pidvirt.h  pidvirt_filewrappers.cpp  pidvirt_miscwrappers.cpp  pidvirt_syscallsreal.c  pidwrappers.cpp  pidwrappers.h  virtualpidtable.cpp
plugin/ptrace/: Makefile.in  README  mtcp_ptrace.c  ptrace.cpp  ptrace.h  ptraceinfo.cpp  ptraceinfo.h  ptracewrappers.cpp  ptracewrappers.h
plugin/spades/: spades-plugin.cpp
plugin/torque/: resource_manager.cpp  resource_manager.h  torque.cpp
plugin/unique-ckpt/: Makefile.in  unique-ckpt.cpp
src/: CMakeLists.txt  Makefile.am  Makefile.in  alarm.cpp  assert_buffer.h  barrierinfo.h  builtinplugins.cpp  builtinplugins.h  ckptserializer.cpp  ckptserializer.h  config.h.in  constants.h  coordinatorapi.cpp  coordinatorapi.h  coordinatorplugin.h  dlsym_default.c  dlsym_default.cpp  dlsym_default.h  dlwrappers.cpp  dmtcp_assert.h  dmtcp_command.cpp  dmtcp_coordinator.cpp  dmtcp_coordinator.h  dmtcp_dlsym.cpp  dmtcp_dlsym_wrappers.cpp  dmtcp_get_libc_offset.c  dmtcp_launch.cpp  dmtcp_nocheckpoint.c  dmtcp_restart.cpp  dmtcp_restart.h  dmtcp_restart_main.cpp  dmtcpmessagetypes.cpp  dmtcpmessagetypes.h  dmtcpnohijackstubs.cpp  dmtcpplugin.cpp  dmtcprestartinternal.cpp  dmtcprestartinternal.h  dmtcpworker.cpp  dmtcpworker.h  execwrappers.cpp  (+84 more)
src/mtcp/: DOC  Makefile  Makefile.debug  Makefile.in  Makefile.mtcp  PORTING  crt1_ppc64.S  ldt.h  main.c  mtcp_check_vdso.c  mtcp_check_vdso.ic  mtcp_header.h  mtcp_restart.c  mtcp_restart.h  mtcp_sys.h  mtcp_util.c  mtcp_util.h  mtcp_util.ic  ppc64_restart.S  restore_libc.c  restore_libc.h  stdlibfnc.c  syscall-aarch64.S  syscall-arm.S  tlsinfo.c  tlsinfo.h  tlsutil.h
src/mtcp-mpi/: Makefile  Makefile.in  PORTING  getcontext.S  mtcp_header.h  mtcp_restart.c  mtcp_split_process.c  mtcp_split_process.h  mtcp_sys.h  mtcp_util.h  mtcp_util.ic  restore_libc.c  restore_libc.h  tlsutil.h
src/mtcp-orig/: Makefile.in  ldt.h  mtcp_sys.h  mtcp_util.ic  tlsutil.h
src/plugin/: CMakeLists.txt  Makefile.am  Makefile.in  connection.cpp  connectionidentifier.cpp  connectionidentifier.h  (+2 more)
static-util/: Makefile.am  Makefile.in  README  dmtcp_ld_NORUNTIME  dmtcp_ld_NORUNTIME_v2  dmtcp_ld_NORUNTIME_v3  dmtcp_lib_symbols  dmtcp_wrapper_symbols  replace_symbols_elf.c  util.c  util.h
trunk/: .gitignore  COPYING  INSTALL  Makefile.in  NEWS  QUICK-START  TODO  configure  configure.ac  configure.in  makeRelease.sh
(+2971 files in other folders)
